osh/openstack/11-placement/manifests/placement/templates/service-ingress.yaml
---
# Source: placement/templates/service-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: placement
spec:
  ports:
    - name: http
      port: 80
    - name: https
      port: 443
  selector:
    app: ingress-api
