osh/openstack/11-placement/manifests/placement/templates/service.yaml
---
# Source: placement/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: placement-api
spec:
  ports:
  - name: p-api
    port: 8778
    
  selector:
    release_group: placement
    application: placement
    component: api
