osh/openstack/11-placement/manifests/placement/templates/ingress.yaml
---
# Source: placement/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: placement
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: "nginx"
  rules:
    - host: placement
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: placement-api
                port:
                  name: "p-api"
    - host: placement.openstack
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: placement-api
                port:
                  name: "p-api"
    - host: placement.openstack.svc.cluster.local
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: placement-api
                port:
                  name: "p-api"
---
# Source: placement/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: placement-namespace-fqdn
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: "nginx"
  rules:
    - host: placement-api.pbandark.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: placement-api
                port:
                  name: "p-api"
---
# Source: placement/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: placement-cluster-fqdn
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: "rackspace-nginx"
  rules:
    - host: placement-api.pbandark.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: placement-api
                port:
                  name: "p-api"
